Add pthread.inc dependency for cthreads unit

--- a/rtl/android/Makefile.fpc
+++ b/rtl/android/Makefile.fpc
@@ -55,6 +55,8 @@ DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
 DYNLIBSINCDIR=$(UNIXINC)
 DL_DEPS_OS=dlandroid.inc
 TERMIODIR=$(LINUXINC)
+PTHREADINCDIR=$(LINUXINC)
+
 SYSCALL_DEPS_OS=$(LINUXINC)/$(ARCH)/syscallh.inc $(LINUXINC)/$(ARCH)/sysnr.inc
 
 UNITPREFIX=rtl
