--- a/rtl/openbsd/Makefile.fpc
+++ b/rtl/openbsd/Makefile.fpc
@@ -18,7 +18,7 @@ units=$(SYSTEMUNIT) $(SYSINIT_UNITS) $(INITCUNIT) $(UUCHARUNIT) $(OBJPASUNIT) $(
       $(ERRORSUNIT) \
       types $(SYSCTL) $(SYSCONSTUNIT) \
       $(FPINTRESUNIT) $(DYNLIBSUNIT) cwstring $(CMEMUNIT) $(DLUNIT) $(TERMIOUNIT) \
-      cthreads $(UNIXCPUNIT) $(FPWIDESTRINGUNIT) \
+      $(CTHREADSUNIT) $(UNIXCPUNIT) $(FPWIDESTRINGUNIT) \
       $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SFPU128UNIT) $(UFLOAT128UNIT)
 
 rsts=$(MATHUNIT) typinfo classes $(SYSCONSTUNIT)
@@ -214,11 +214,4 @@ else
 cpu$(PPUEXT) : $(PROCINC)/cpu.pp $(SYSTEMUNIT)$(PPUEXT)
         $(COMPILER) $<
 endif
-
-#
-# Other system-dependent RTL Units
-#
-
-cthreads$(PPUEXT) : $(UNIXINC)/cthreads.pp
-        $(COMPILER) $<
 
