--- a/rtl/sinclairql/Makefile.fpc
+++ b/rtl/sinclairql/Makefile.fpc
@@ -10,7 +10,7 @@ loaders=$(LOADERS)
 units=$(SYSTEMUNIT) $(UUCHARUNIT) $(OBJPASUNIT) $(ISO7185UNIT) buildrtl $(CPALLUNIT)
 # $(EXTPASUNIT) $(MACPASUNIT)
 implicitunits=si_prc \
-      ctypes $(RTLCONSTSUNIT) $(STRINGSUNIT) \
+      $(CTYPESUNIT) $(RTLCONSTSUNIT) $(STRINGSUNIT) \
       $(SORTBASEUNIT) $(CHARSETUNIT) $(FPWIDESTRINGUNIT) \
       $(CP_UNITS) $(UNICODEDATAUNIT)
 
