--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -1489,7 +1489,9 @@ UnixApi.CWString$(PPUEXT) : $(NSINC)/UnixApi.CWString.pp $(CWSTRING_DEPS)
 #
 
 ifneq ($(UNIXINC),)
+ifneq ($(OS_TARGET),macosclassic)
   CTYPES_DEPS_OS+=$(UNIXTYPEUNIT)$(PPUEXT)
+endif
 endif
 
 CTYPES_DEPS=$(INC)/ctypes.pp \
